--- a/careportsapp-ui/src/app/app.component.html
+++ b/careportsapp-ui/src/app/app.component.html
@@ -73,6 +73,12 @@
                   <span>Dev Items</span>
                 </a>
               </li>
+              <li>
+                <a routerLink="/release-all-items" routerLinkActive="active">
+                  <i class="fa fa-cloud" aria-hidden="true"></i>
+                  <span>Releases</span>
+                </a>
+              </li>
               
             </ul>
           </nav>
